--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -1,7 +1,48 @@
-.home {
+@import "../color-palette.scss";
+@import "../variables.scss";
+@import "../mixins.scss";
+
+.home-wrapper {
   &__hero-img {
     object-fit: cover;
     width: 100%;
     height: 100vh;
+    margin-top: -$header-height;
+  }
+  &__content {
+    width: 100%;
+    min-height: 80vh;
+    background-image: url("~/website/img/hexagone-pattern.png");
+    background-repeat: repeat;
+    padding: 5% 15%;
+    h2 {
+      margin: 0;
+      color: white;
+      font-size: 2rem;
+    }
+    .row {
+      .col {
+        padding: 5px;
+      }
+    }
+  }
+  &__navLinks {
+    list-style: none;
+    color: white;
+    padding: 20px;
+    li {
+      display: inline-block;
+      cursor: pointer;
+      padding-right: 20px;
+      transition: all 0.3s ease 0s;
+      color: $inactive-header-link;
+      font-size: 1.5rem;
+      font-weight: lighter;
+    }
+    &--active {
+      color: $primary !important;
+      text-decoration: underline;
+      font-family: "Roboto Bold";
+    }
   }
 }
