--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -30,6 +30,7 @@
     list-style: none;
     color: white;
     padding: 20px;
+    margin-bottom: 0;
     li {
       display: inline-block;
       cursor: pointer;
