--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -6,16 +6,21 @@
   position: sticky;
   top: 0;
   width: 100%;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.5) 80%,
-    rgba(0, 0, 0, 0) 100%
-  );
   display: flex;
   justify-content: flex-end;
   align-items: center;
   height: $header-height;
   z-index: 100;
+  &--solid {
+    background: $solid-header;
+  }
+  &--gradient {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.5) 80%,
+      rgba(0, 0, 0, 0) 100%
+    );
+  }
   &--desktop {
     display: none;
     width: 100%;
