--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -112,7 +112,7 @@
   top: calc(#{$header-height} / 2.5);
   right: 24px;
   @include is-mobile {
-    top: calc(#{$header-height-mobile} / 3.5);
+    top: calc(#{$header-height-mobile} / 7);
   }
 }
 
@@ -123,7 +123,7 @@
   z-index: 500;
   top: 0;
   left: 0;
-  background-color: black;
+  background-color: $accent;
   overflow-y: hidden;
   transition: 0.5s;
 }
@@ -164,6 +164,7 @@
 }
 
 .overlay .closebtn {
+  color: $primary;
   position: absolute;
   top: 20px;
   right: 45px;
