--- a/src/assets/sass/website/components/home/login-modal.scss
+++ b/src/assets/sass/website/components/home/login-modal.scss
@@ -1,4 +1,5 @@
 @import "../../color-palette.scss";
+@import "../../mixins.scss";
 
 .login-modal {
   position: fixed; /* Stay in place */
@@ -26,6 +27,9 @@
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
+  @include is-mobile {
+    width: 80%;
+  }
 }
 
 /* Add Animation */
