--- a/src/assets/sass/website/components/home/register-modal.scss
+++ b/src/assets/sass/website/components/home/register-modal.scss
@@ -1,4 +1,5 @@
 @import "../../color-palette.scss";
+@import "../../mixins.scss";
 
 .register-modal {
   position: fixed; /* Stay in place */
@@ -11,6 +12,9 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  @include is-mobile {
+    padding-top: 50px;
+  }
 }
 
 /* Modal Content */
@@ -26,6 +30,9 @@
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
+  @include is-mobile {
+    width: 80%;
+  }
 }
 
 /* Add Animation */
