--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -8,6 +8,9 @@
     width: 100%;
     height: 100vh;
     margin-top: -$header-height;
+    @include is-mobile {
+      margin-top: -$header-height-mobile;
+    }
   }
   &__content {
     width: 100%;
