--- a/src/assets/sass/website/containers/story.scss
+++ b/src/assets/sass/website/containers/story.scss
@@ -14,6 +14,9 @@
     width: 100%;
     min-height: 80vh;
     padding: 5% 15%;
+    @include is-mobile {
+      min-height: 82vh;
+    }
     h1,
     p {
       color: white;
