--- a/src/assets/sass/website/shared/hexa-card.scss
+++ b/src/assets/sass/website/shared/hexa-card.scss
@@ -1,32 +1,51 @@
 @import "../variables.scss";
-
-$notchSize: 12px;
+@import "../color-palette.scss";
+@import "../mixins.scss";
 
 .hexa-card-wrapper {
   position: relative;
-  &__border-img {
+  height: 200px;
+  margin: 5px;
+  filter: drop-shadow(0 0 4px #175e90);
+  &__outside {
+    position: relative;
     width: 100%;
+    height: 100%;
+    background: #175e90;
+    @include create-hexagone-shape(12px);
   }
+
+  &__inside {
+    display: flex;
+    position: absolute;
+    top: $border-thickness;
+    left: $border-thickness;
+    right: $border-thickness;
+    bottom: $border-thickness;
+    font-size: 1.05rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease;
+    @include create-hexagone-shape(12px);
+    &:hover {
+      background: rgba($color: #000000, $alpha: 0.95);
+    }
+  }
+  // &__border-img {
+  //   width: 100%;
+  // }
   &__bg-img,
   &__overlay {
     position: absolute;
-    top: 10.5%;
-    left: 5%;
-    width: 90%;
-    height: 79%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     margin: auto;
     display: block;
     object-fit: cover;
-    clip-path: polygon(
-      0% $notchSize,
-      $notchSize 0%,
-      calc(100% - #{$notchSize}) 0%,
-      100% $notchSize,
-      100% calc(100% - #{$notchSize}),
-      calc(100% - #{$notchSize}) 100%,
-      $notchSize 100%,
-      0% calc(100% - #{$notchSize})
-    );
+    @include create-hexagone-shape(12px);
   }
   &__overlay {
     background-color: rgba($color: #000000, $alpha: 0.7);
