--- a/src/assets/sass/website/shared/spinner.scss
+++ b/src/assets/sass/website/shared/spinner.scss
@@ -1,4 +1,5 @@
 @import "../color-palette.scss";
+@import "../variables.scss";
 
 .spinner-wrapper {
   height: 100vh;
@@ -17,7 +18,7 @@
     width: 100% !important;
   }
   &--large-loader {
-    height: 122vh;
+    height: 100vh;
     width: 100vw !important;
     float: left;
     &--en {
