--- a/src/assets/sass/website/variables.scss
+++ b/src/assets/sass/website/variables.scss
@@ -3,3 +3,4 @@ $header-height-mobile: 75px;
 $footer-height: 80px;
 $footer-height-mobile: 80px;
 $border-thickness: 1px;
+$hero-image-height: 248px;
