--- a/src/assets/sass/website/mixins.scss
+++ b/src/assets/sass/website/mixins.scss
@@ -137,3 +137,29 @@
     0% calc(100% - #{$notchSize})
   );
 }
+@mixin create-hero-header-shape() {
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 4%,
+    100% 85%,
+    99% 92%,
+    66% 92%,
+    60% 130%,
+    2% 105%,
+    0 93%
+  );
+  @include is-mobile {
+    clip-path: polygon(
+      0 0,
+      98% 0,
+      100% 4%,
+      100% 92%,
+      98% 95%,
+      66% 95%,
+      62% 100%,
+      2% 100%,
+      0 96%
+    );
+  }
+}
