finish events and event details

--- a/src/assets/sass/website/components/home/login-modal.scss
+++ b/src/assets/sass/website/components/home/login-modal.scss
@@ -17,7 +17,7 @@
 /* Modal Content */
 .login-modal-content {
   position: relative;
-  background-color: #0a5990;
+  background-color: $placeholder-background;
   border: 1px solid #1b90e2;
   margin: auto;
   padding: 0;
