--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -3,6 +3,19 @@
 @import "../mixins.scss";
 
 .home-wrapper {
+  height: 100vh;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 5px !important;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary !important;
+    border-radius: 20px !important;
+  }
+  &::-webkit-scrollbar {
+    background-color: $accent !important;
+    border-radius: 20px !important;
+  }
   &__hero-img {
     object-fit: cover;
     width: 100%;
