--- a/src/assets/sass/website/variables.scss
+++ b/src/assets/sass/website/variables.scss
@@ -4,3 +4,4 @@ $footer-height: 80px;
 $footer-height-mobile: 80px;
 $border-thickness: 1px;
 $hero-image-height: 248px;
+$half-page-hero-image-height: 60vh;
