--- a/src/assets/sass/website/components/home/register-modal.scss
+++ b/src/assets/sass/website/components/home/register-modal.scss
@@ -20,7 +20,7 @@
 /* Modal Content */
 .register-modal-content {
   position: relative;
-  background-color: #0a5990;
+  background-color: $placeholder-background;
   border: 1px solid #1b90e2;
   margin: auto;
   padding: 0;
