--- a/src/assets/sass/website/mixins.scss
+++ b/src/assets/sass/website/mixins.scss
@@ -163,3 +163,29 @@
     );
   }
 }
+@mixin create-half-page-hero-shape() {
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 4%,
+    100% 85%,
+    99% 92%,
+    66% 92%,
+    62% 100%,
+    2% 100%,
+    0 93%
+  );
+  @include is-mobile {
+    clip-path: polygon(
+      0 0,
+      98% 0,
+      100% 4%,
+      100% 92%,
+      98% 95%,
+      66% 95%,
+      62% 100%,
+      2% 100%,
+      0 96%
+    );
+  }
+}
