add sponsors to dashboard and event detailsin website

--- a/src/assets/sass/website/components/events/main-event-card.scss
+++ b/src/assets/sass/website/components/events/main-event-card.scss
@@ -70,7 +70,7 @@
     height: 100%;
     .badge.badge-pill.badge-secondary {
       background-color: rgba($color: #6c757d, $alpha: 0.4) !important;
-      margin-left: 0 auto;
+      margin-left: -40px;
       img {
         margin-right: 5px;
       }
