--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -76,14 +76,14 @@
         color: $primary;
       }
     }
-    &__cutom-btn-outside {
+    &__custom-btn-outside {
       position: relative;
       width: 70%;
       height: 100%;
       background: $primary;
       @include create-hexagone-shape(10px);
     }
-    &__cutom-btn-inside {
+    &__custom-btn-inside {
       display: flex;
       position: absolute;
       top: $border-thickness;
@@ -97,6 +97,14 @@
       align-items: center;
       transition: all 0.2s ease;
       @include create-hexagone-shape(10px);
+    }
+    &__main-sponsor {
+      width: 80px;
+      margin-left: 15px;
+    }
+    &__sub-sponsor {
+      width: 40px;
+      margin: 15px;
     }
   }
 }
