--- a/src/assets/sass/website/components/events/sub-event-card.scss
+++ b/src/assets/sass/website/components/events/sub-event-card.scss
@@ -4,7 +4,7 @@
 
 .sub-event-card-wrapper {
   position: relative;
-  height: 200px;
+  height: 150px;
   margin: 5px;
   filter: drop-shadow(0 0 4px #175e90);
   cursor: pointer;
@@ -29,9 +29,6 @@
     align-items: center;
     transition: all 0.2s ease;
     @include create-hexagone-shape(12px);
-    &:hover {
-      background: rgba($color: #000000, $alpha: 0.95);
-    }
   }
   &__bg-img,
   &__overlay {
@@ -50,6 +47,10 @@
     color: white;
     padding: 2%;
     display: flex;
+    transition: all 0.3s ease;
+    &:hover {
+      background: rgba($color: #000000, $alpha: 0.8);
+    }
   }
   &__logo {
     width: 30%;
@@ -71,7 +72,7 @@
     }
     h1 {
       font-size: 1.5rem;
-      margin-top: 20px;
+      margin-top: 10px;
     }
     p {
       font-size: 0.9rem;
