--- a/src/assets/sass/website/containers/tournaments/tournament-details.scss
+++ b/src/assets/sass/website/containers/tournaments/tournament-details.scss
@@ -2,7 +2,7 @@
 @import "../../variables.scss";
 @import "../../mixins.scss";
 
-.event-details-wrapper {
+.tournament-details-wrapper {
   background-image: url("~/website/img/hexagone-pattern.png");
   background-repeat: repeat;
   height: 100vh;
@@ -32,7 +32,6 @@
   }
 
   &__inside {
-    position: relative;
     width: calc(100% - 2px);
     height: calc(#{$half-page-hero-image-height} - 4px);
     background-position: center center;
@@ -43,15 +42,12 @@
     video {
       object-fit: cover;
     }
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 
   &__content {
     width: 100%;
     padding: 5vh 15%;
-    min-height: calc(100vh - 12vh);
+    min-height: calc(100vh - 50vh);
     color: white;
     @include is-mobile {
       min-height: 82vh;
@@ -68,47 +64,23 @@
         color: $primary;
       }
     }
-    &__logo {
-      img {
-        width: 200px;
-      }
-    }
-    &__tournaments {
-      margin-top: 50px;
-      div:nth-child(1) {
-        font-size: 2rem;
-        color: $primary;
-      }
-    }
-    &__custom-btn-outside {
+  }
+  &__custom-button-wrapper {
+    width: 190px;
+    height: 52px;
+    cursor: pointer;
+    &__outside {
       position: relative;
-      width: 70%;
+      width: 100%;
       height: 100%;
-      background: $primary;
-      @include create-hexagone-shape(10px);
-    }
-    &__custom-btn-inside {
-      display: flex;
-      position: absolute;
-      top: $border-thickness;
-      left: $border-thickness;
-      right: $border-thickness;
-      bottom: $border-thickness;
-      background: #100000;
+      background: $placeholder-background;
+      color: white;
       font-size: 1.05rem;
       display: flex;
       justify-content: center;
       align-items: center;
       transition: all 0.2s ease;
       @include create-hexagone-shape(10px);
-    }
-    &__main-sponsor {
-      width: 80px;
-      margin-left: 15px;
-    }
-    &__sub-sponsor {
-      width: 40px;
-      margin: 15px;
     }
   }
 }
