fix styles in event details page

--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -46,6 +46,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    img {
+      width: 30%;
+    }
   }
 
   &__content {
