--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -5,10 +5,17 @@
   width: 100%;
   background-color: #121828;
   color: white;
-  text-align: center;
-  img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  div {
+    width: fit-content;
+    height: fit-content;
+  }
+  a img {
+    display: inline-block;
     max-width: 90px;
-    margin: 15px 80px 0;
+    margin: auto 40px;
     @include is-mobile {
       max-width: 60px;
       margin: 30px 15px;
