--- a/src/assets/sass/website/components/events/main-event-card.scss
+++ b/src/assets/sass/website/components/events/main-event-card.scss
@@ -9,6 +9,10 @@
   margin: 5px;
   filter: drop-shadow(0 0 4px #175e90);
   cursor: pointer;
+  transition: all 0.3s ease;
+  &:hover {
+    filter: drop-shadow(0 0 8px #175e90);
+  }
   &__outside {
     position: relative;
     width: 100%;
@@ -28,11 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.2s ease;
     @include create-hexagone-shape(12px);
-    &:hover {
-      background: rgba($color: #000000, $alpha: 0.95);
-    }
   }
   &__bg-img,
   &__overlay {
@@ -51,6 +51,10 @@
     color: white;
     padding: 2%;
     display: flex;
+    transition: all 0.3s ease;
+    &:hover {
+      background: rgba($color: #000000, $alpha: 0.8);
+    }
   }
   &__logo {
     margin-bottom: 50%;
@@ -77,6 +81,7 @@
     }
     &__game-logo {
       width: 80% !important;
+      margin-top: 20px;
     }
   }
 }
