--- a/src/assets/sass/website/components/events/sub-event-card.scss
+++ b/src/assets/sass/website/components/events/sub-event-card.scss
@@ -8,6 +8,10 @@
   margin: 5px;
   filter: drop-shadow(0 0 4px #175e90);
   cursor: pointer;
+  transition: all 0.3s ease;
+  &:hover {
+    filter: drop-shadow(0 0 8px #175e90);
+  }
   &__outside {
     position: relative;
     width: 100%;
