--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -12,7 +12,7 @@
     width: fit-content;
     height: fit-content;
   }
-  a img {
+  div img {
     display: inline-block;
     max-width: 90px;
     margin: auto 40px;
