--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -7,6 +7,7 @@
   overflow-y: auto;
   &::-webkit-scrollbar {
     width: 5px !important;
+    height: 5px !important;
   }
   &::-webkit-scrollbar-thumb {
     background-color: $primary !important;
@@ -15,6 +16,12 @@
   &::-webkit-scrollbar {
     background-color: $accent !important;
     border-radius: 20px !important;
+  }
+  &__slide {
+    height: 100vh !important;
+    object-fit: cover;
+    object-position: center;
+    cursor: pointer;
   }
   &__hero-img {
     object-fit: cover;
@@ -27,7 +34,7 @@
   }
   &__content {
     width: 100%;
-    min-height: 80vh;
+    min-height: 100vh;
     background-image: url("~/website/img/hexagone-pattern.png");
     background-repeat: repeat;
     padding: 5% 15%;
