--- a/src/assets/sass/website/containers/tournaments/tournament-details.scss
+++ b/src/assets/sass/website/containers/tournaments/tournament-details.scss
@@ -10,6 +10,7 @@
   overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 5px !important;
+    height: 5px !important;
   }
   &::-webkit-scrollbar-thumb {
     background-color: $primary !important;
