--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -8,6 +8,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  bottom: 0;
+  transition: 0.5s;
+  &--show {
+    transform: translateY(0);
+  }
+  &--hide {
+    transform: translateY(120px);
+  }
   div {
     width: fit-content;
     height: fit-content;
