--- a/src/assets/sass/website/shared/avatar.scss
+++ b/src/assets/sass/website/shared/avatar.scss
@@ -13,6 +13,33 @@
   justify-content: center;
   align-items: center;
   margin-top: -5px;
+  &__navLinks {
+    list-style: none;
+    margin-bottom: 0;
+    width: 100%;
+    padding-left: 5px;
+    // margin-left: -10%;
+    text-align: center;
+    li {
+      // display: inline-block;
+      cursor: pointer;
+      margin-bottom: 5px;
+      a {
+        transition: all 0.3s ease 0s;
+        color: black;
+        font-size: 1.2rem;
+        font-weight: lighter;
+      }
+      &:hover {
+        a {
+          color: $primary;
+        }
+      }
+    }
+    &--active a {
+      color: $primary !important;
+    }
+  }
   div span {
     &::selection {
       background-color: transparent;
