add cover image flag to tournament and fix some style issues

--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -112,6 +112,13 @@ span {
   background-color: transparent !important;
 }
 
+#description-container {
+  word-break: break-word;
+  span {
+    color: white !important;
+  }
+}
+
 .pell-content > p > * {
   color: black !important;
 }
