--- a/src/assets/sass/website/mixins.scss
+++ b/src/assets/sass/website/mixins.scss
@@ -207,24 +207,37 @@
     0 0,
     100% 0,
     100% 4%,
-    100% 85%,
-    99% 92%,
-    66% 92%,
+    100% 92%,
+    99% 97%,
+    66% 97%,
     65% 100%,
     2% 100%,
-    0 93%
+    0 95%
   );
+  @media (min-height: 950px) {
+    clip-path: polygon(
+      0 0,
+      100% 0,
+      100% 4%,
+      100% 99.5%,
+      98% 100%,
+      66% 100%,
+      62% 100%,
+      2% 100%,
+      0 99.5%
+    );
+  }
   @include is-mobile {
     clip-path: polygon(
       0 0,
       98% 0,
       100% 4%,
-      100% 92%,
-      98% 95%,
-      66% 95%,
+      100% 99.8%,
+      98% 100%,
+      66% 100%,
       62% 100%,
       2% 100%,
-      0 96%
+      0 99.8%
     );
   }
 }
