--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -50,7 +50,7 @@
       object-fit: cover;
     }
     img {
-      width: 20%;
+      height: 30vh;
       position: absolute;
       display: table;
       vertical-align: middle;
@@ -70,6 +70,7 @@
     color: white;
     @include is-mobile {
       min-height: 82vh;
+      padding: 5%;
     }
     &__breadcrumb {
       font-size: 1.8rem;
@@ -86,6 +87,9 @@
     &__logo {
       img {
         width: 200px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
     &__tournaments {
@@ -94,13 +98,24 @@
         font-size: 2rem;
         color: $primary;
       }
+      &__title {
+        @include is-mobile {
+          margin-top: 30px !important;
+        }
+      }
+      div:nth-child(2) {
+        height: 60px;
+      }
     }
     &__custom-btn-outside {
       position: relative;
-      width: 70%;
+      width: 80%;
       height: 100%;
       background: $primary;
       @include create-hexagone-shape(10px);
+      @include is-mobile {
+        width: 100%;
+      }
     }
     &__custom-btn-inside {
       position: absolute;
