--- a/src/assets/sass/website/containers/games/game-details.scss
+++ b/src/assets/sass/website/containers/games/game-details.scss
@@ -49,11 +49,15 @@
     color: white;
     @include is-mobile {
       min-height: 82vh;
+      padding: 5%;
     }
     &__breadcrumb {
       font-size: 1.8rem;
       margin-bottom: 50px;
       padding-left: 15px;
+      @include is-mobile {
+        margin-bottom: 30px;
+      }
       a {
         text-decoration: none;
         color: white;
@@ -65,6 +69,9 @@
     &__logo {
       img {
         width: 200px;
+      }
+      @include is-mobile {
+        margin-bottom: 15px;
       }
     }
     &__tournaments {
