--- a/src/assets/sass/website/containers/story.scss
+++ b/src/assets/sass/website/containers/story.scss
@@ -51,7 +51,7 @@
       clip-path: inset(0 0 0 0);
     }
     img {
-      width: 20%;
+      height: 150px;
       position: absolute;
       display: table;
       vertical-align: middle;
@@ -67,6 +67,7 @@
     min-height: calc(100vh - 12vh);
     @include is-mobile {
       min-height: 82vh;
+      padding: 5%;
     }
     h1,
     p {
