fix some styles in sponsors,events, and tournament and logic in login modal

--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -112,10 +112,17 @@ span {
   background-color: transparent !important;
 }
 
-#description-container {
+.description-container {
   word-break: break-word;
+  overflow: hidden;
   span {
     color: white !important;
+  }
+  &--expand {
+    height: 100%;
+  }
+  &--limit {
+    height: 200px;
   }
 }
 
