--- a/src/assets/sass/website/components/events/main-event-card.scss
+++ b/src/assets/sass/website/components/events/main-event-card.scss
@@ -57,7 +57,6 @@
     }
   }
   &__logo {
-    margin-bottom: 50%;
     img {
       width: 60%;
       max-width: 100px;
@@ -74,14 +73,28 @@
     height: 100%;
     .badge.badge-pill.badge-secondary {
       background-color: rgba($color: #6c757d, $alpha: 0.4) !important;
-      margin-left: -40px;
+      margin-bottom: 10px;
       img {
         margin-right: 5px;
       }
     }
-    &__game-logo {
-      width: 80% !important;
-      margin-top: 20px;
+    &__game-logos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: center;
+      // column-gap: 2%;
+      // row-gap: 2%;
     }
+    &__game-logo {
+      width: 30% !important;
+      margin: 1%;
+    }
+  }
+  &__first-section {
+    height: 60%;
+  }
+  &__second-section {
+    height: 40%;
   }
 }
