--- a/src/assets/sass/website/components/events/sub-event-card.scss
+++ b/src/assets/sass/website/components/events/sub-event-card.scss
@@ -63,6 +63,9 @@
     margin-bottom: auto;
     img {
       width: 100%;
+      height: 130px;
+      max-height: 140px;
+      object-fit: scale-down;
     }
   }
   &__content {
@@ -83,8 +86,10 @@
       background-color: rgba($color: #6c757d, $alpha: 0.4) !important;
     }
     h1 {
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       margin-top: 10px;
+      margin-bottom: 0;
+      word-break: break-all;
       @include is-mobile {
         font-size: 1.2rem;
         margin-bottom: 5px;
