add short title for games and show more games on main event card

--- a/src/assets/sass/website/components/events/main-event-card.scss
+++ b/src/assets/sass/website/components/events/main-event-card.scss
@@ -83,12 +83,10 @@
       flex-wrap: wrap;
       justify-content: flex-start;
       align-items: center;
-      // column-gap: 2%;
-      // row-gap: 2%;
     }
     &__game-logo {
-      width: 30% !important;
-      margin: 1%;
+      width: 25% !important;
+      margin: 2% 4%;
     }
   }
   &__first-section {
