--- a/src/assets/sass/website/containers/games/game-details.scss
+++ b/src/assets/sass/website/containers/games/game-details.scss
@@ -39,6 +39,9 @@
     @include create-half-page-hero-shape();
     video {
       object-fit: cover;
+      @include is-mobile {
+        height: 100%;
+      }
     }
   }
 
