--- a/src/assets/sass/website/shared/game-card.scss
+++ b/src/assets/sass/website/shared/game-card.scss
@@ -2,7 +2,7 @@
 @import "../color-palette.scss";
 @import "../mixins.scss";
 
-.hexa-card-wrapper {
+.game-card-wrapper {
   position: relative;
   height: 150px;
   margin: 5px;
@@ -55,8 +55,10 @@
   &__logo {
     width: 30%;
     margin-left: 5%;
-    margin-top: auto;
-    margin-bottom: auto;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     img {
       width: 100%;
     }
@@ -65,8 +67,9 @@
     width: 60%;
     padding-left: 15%;
     h1 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       margin-top: 20px;
+      word-break: break-all;
     }
     p {
       font-size: 0.9rem;
