--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -23,7 +23,7 @@ td,
 button.close {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif !important;
   font-weight: $font-weight-normal;
 }
 
@@ -37,47 +37,53 @@ h4,
 .h4 {
   font-weight: $font-weight-light;
   margin: $margin-large-vertical 0 $margin-base-vertical;
+  font-family: "Roboto" !important;
 }
 
 h1,
 .h1 {
   font-size: $font-size-h1;
+  font-family: "Roboto" !important;
 }
 h2,
 .h2 {
   font-size: $font-size-h2;
+  font-family: "Roboto" !important;
 }
 h3,
 .h3 {
   font-size: $font-size-h3;
   margin: 20px 0 10px;
+  font-family: "Roboto" !important;
 }
 h4,
 .h4 {
   font-size: $font-size-h4;
   line-height: 30px;
+  font-family: "Roboto" !important;
 }
 h5,
 .h5 {
   font-size: $font-size-h5;
   margin-bottom: 15px;
+  font-family: "Roboto" !important;
 }
 h6,
 .h6 {
   font-size: $font-size-h6;
   font-weight: $font-weight-bold;
   text-transform: uppercase;
-  font-family: "Roboto";
+  font-family: "Roboto" !important;
 }
 p {
   font-size: $font-paragraph;
   line-height: $line-height-general;
-  font-family: "Roboto";
+  font-family: "Roboto" !important;
 }
 p > * {
   color: white !important;
   background-color: transparent !important;
-  font-family: "Roboto";
+  font-family: "Roboto" !important;
 }
 .description > p > * {
   color: black !important;
