edit profile image, and fix some styles

--- a/src/assets/sass/website/containers/games/game-details.scss
+++ b/src/assets/sass/website/containers/games/game-details.scss
@@ -71,11 +71,14 @@
     }
     &__logo {
       img {
-        width: 200px;
+        height: 200px;
       }
       @include is-mobile {
         margin-bottom: 15px;
       }
+    }
+    &__description {
+      padding-top: 60px;
     }
     &__tournaments {
       margin-top: 50px;
