--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -99,6 +99,9 @@
         margin-right: auto;
       }
     }
+    &__description {
+      padding-top: 60px;
+    }
     &__tournaments {
       margin-top: 50px;
       div:nth-child(1) {
