--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -128,6 +128,9 @@ span {
   span {
     color: white !important;
   }
+  span > * {
+    color: white !important;
+  }
   &--expand {
     height: 100%;
   }
