--- a/src/assets/sass/website/shared/tabs.scss
+++ b/src/assets/sass/website/shared/tabs.scss
@@ -7,7 +7,7 @@
   position: relative;
   filter: drop-shadow(0 0 4px #175e90) !important;
   h3 {
-    word-break: break-all;
+    word-break: break-word;
   }
 }
 
