--- a/src/assets/sass/website/components/events/tournament-card.scss
+++ b/src/assets/sass/website/components/events/tournament-card.scss
@@ -75,7 +75,7 @@
     h1 {
       font-size: 1.4rem;
       margin-top: 20px;
-      word-break: break-all;
+      word-break: break-word;
       @include is-mobile {
         font-size: 1.2rem;
       }
