--- a/src/assets/sass/website/shared/game-card.scss
+++ b/src/assets/sass/website/shared/game-card.scss
@@ -69,7 +69,7 @@
     h1 {
       font-size: 1.4rem;
       margin-top: 20px;
-      word-break: break-all;
+      word-break: break-word;
     }
     p {
       font-size: 0.9rem;
