--- a/src/assets/sass/website/components/home/register-modal.scss
+++ b/src/assets/sass/website/components/home/register-modal.scss
@@ -12,6 +12,16 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  &::-webkit-scrollbar {
+    width: 5px !important;
+    background-color: $accent !important;
+    border-radius: 20px !important;
+    height: 2px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary !important;
+    border-radius: 20px !important;
+  }
   @include is-mobile {
     padding-top: 50px;
   }
@@ -112,4 +122,83 @@
       opacity: 0.7;
     }
   }
+}
+
+$preview-image: 160px;
+.dropbox {
+  outline: 2px dashed grey; /* the dash box */
+  outline-offset: -10px;
+  background: lightcyan;
+  color: dimgray;
+  padding: 10px 10px;
+  height: $preview-image; /* minimum height */
+  width: 70%;
+  margin: auto;
+  position: relative;
+  cursor: pointer;
+}
+
+.input-file {
+  opacity: 0; /* invisible but it's there! */
+  width: 100%;
+  height: $preview-image;
+  position: absolute;
+  cursor: pointer;
+}
+
+.dropbox:hover {
+  background: lightblue; /* when mouse over to the drop zone, change color */
+}
+
+.dropbox p {
+  font-size: 1.2em;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.preview {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.preview img {
+  max-width: 100%;
+  height: $preview-image;
+  border-radius: 10px !important;
+  border: 1px solid $primary;
+}
+
+.preview__close {
+  position: absolute;
+  top: -20px;
+  right: 0;
+  color: white;
+  float: right;
+  font-size: 30px;
+  float: right;
+  cursor: pointer;
+  width: 20px;
+  margin-bottom: 0;
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+.form-control {
+  background-color: black !important;
+  border: 1px solid #2af3f3 !important;
+  color: #2af3f3 !important;
+}
+
+.input-group-text {
+  background-color: transparent !important;
+  border: none !important;
+  padding: 0 !important;
+  width: 150px !important;
+}
+.input-group-prepend {
+  display: flex !important;
 }
