--- a/src/assets/sass/website/containers/profile.scss
+++ b/src/assets/sass/website/containers/profile.scss
@@ -161,15 +161,16 @@ $preview-image: 150px;
   object-fit: cover;
 }
 
-.preview__close {
+.preview__close,
+.preview-cover__close {
   position: absolute;
   top: 0;
   right: 0;
   color: $accent;
   background-color: $primary;
-  font-size: 20px;
   float: right;
   cursor: pointer;
+  font-size: 20px;
   width: 20px;
   height: 20px;
   display: flex;
@@ -182,4 +183,15 @@ $preview-image: 150px;
     text-decoration: none;
     cursor: pointer;
   }
+}
+
+.preview__close {
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+}
+.preview-cover__close {
+  font-size: 25px;
+  width: 25px;
+  height: 25px;
 }
