fix styles of links

--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -145,6 +145,11 @@ span {
     color: white !important;
     word-break: break-word;
   }
+  span > a {
+    color: #2af3f3 !important;
+    word-break: break-word;
+    text-decoration: underline;
+  }
   &--expand {
     height: 100%;
   }
