--- a/src/assets/sass/website/containers/events/event-details.scss
+++ b/src/assets/sass/website/containers/events/event-details.scss
@@ -119,38 +119,32 @@
     }
     &__custom-btn-outside {
       position: relative;
-      width: 80%;
+      width: 100%;
       height: 100%;
-      background: $primary;
-      @include create-hexagone-shape(10px);
-      @include is-mobile {
-        width: 100%;
-      }
-    }
-    &__custom-btn-inside {
-      position: absolute;
-      top: $border-thickness;
-      left: $border-thickness;
-      right: $border-thickness;
-      bottom: $border-thickness;
-      background: #100000;
+      background: $solid-header;
+      border: 2px solid $primary;
+      border-radius: 10px;
       font-size: 1.05rem;
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: all 0.2s ease;
-      @include create-hexagone-shape(10px);
+      flex-flow: wrap;
+      @include is-mobile {
+        width: 100%;
+      }
       a {
         cursor: pointer;
       }
     }
-    &__main-sponsor {
+    &__sponsor {
       width: 80px;
       margin-left: 15px;
     }
-    &__sub-sponsor {
-      width: 55px;
-      margin: 15px;
+    &__divider {
+      width: 2px;
+      height: 35px;
+      margin: auto 10px;
+      background-color: white !important;
     }
   }
 }
