--- a/src/assets/sass/website/containers/tournaments/tournament-details.scss
+++ b/src/assets/sass/website/containers/tournaments/tournament-details.scss
@@ -80,8 +80,6 @@
     }
     &__breadcrumb {
       font-size: 1.8rem;
-      margin-bottom: 50px;
-      padding-left: 15px;
       @include is-mobile {
         font-size: 1.3rem;
         margin-bottom: 20px;
@@ -99,18 +97,57 @@
     width: 190px;
     height: 52px;
     cursor: pointer;
+    display: none !important;
     &__outside {
       position: relative;
       width: 100%;
       height: 100%;
-      background: $placeholder-background;
-      color: white;
-      font-size: 1.05rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background: $solid-header;
+      border: 2px solid $primary;
+      color: $primary;
+      border-radius: 10px;
+      font-size: 1.3rem;
+      display: none;
       transition: all 0.2s ease;
-      @include create-hexagone-shape(10px);
+      @include is-mobile {
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+      }
     }
+    @include is-mobile {
+      display: flex !important;
+      justify-content: flex-end;
+      align-items: center;
+    }
+  }
+  &__custom-btn-outside {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: $solid-header;
+    border: 2px solid $primary;
+    border-radius: 10px;
+    font-size: 1.05rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: wrap;
+    @include is-mobile {
+      width: 100%;
+    }
+    a {
+      cursor: pointer;
+    }
+  }
+  &__sponsor {
+    width: 80px;
+    margin-left: 15px;
+  }
+  &__divider {
+    width: 2px;
+    height: 35px;
+    margin: auto 10px;
+    background-color: white !important;
   }
 }
