--- a/src/assets/sass/website/shared/tabs.scss
+++ b/src/assets/sass/website/shared/tabs.scss
@@ -8,6 +8,33 @@
   h3 {
     word-break: break-word;
   }
+  &__custom-button-wrapper {
+    width: 250px;
+    height: 52px;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    &__outside {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background: $solid-header;
+      border: 2px solid $primary;
+      color: $primary;
+      border-radius: 10px;
+      font-size: 1.3rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.2s ease;
+      @include is-mobile {
+        display: none !important;
+      }
+    }
+    @include is-mobile {
+      display: none !important;
+    }
+  }
 }
 
 .nav-tabs {
